# MCS-Agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: main.py
app/routers/: chat.py
app/services/: chat_model.py
app/utils/: config.py  exceptions.py  logger.py
